added new image folder and css styles

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 </div>
 <div class="cos">
     <div class="article1">
-        <img src="css/img/1.jpeg">
+        <img src="css/newImages/1.jpeg">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore <br>magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
     </div>
     <div class="article2">
-        <img src="css/img/2.jpeg">
+        <img src="css/newImages/2.jpeg">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore <br>magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
     </div>
     <div class="article3">
-        <img src="css/img/3.jpeg">
+        <img src="css/newImages/3.jpeg">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore <br>magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
     </div>
     <div class="article4">
-        <img src="css/img/4.jpeg">
+        <img src="css/newImages/4.jpeg">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore <br>magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
     </div>
 
